--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 p{
     background-color: aliceblue;
     border: solid 2px black;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    font-size: 20px;
 }
